--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.25.0",
     "express": "^4.14.0",
     "express-ws": "^2.0.0",
     "http": "0.0.0",
+    "instructure-ui": "^0.15.0",
     "node-uuid": "^1.4.7",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
     "ws": "^1.1.1"
   }
 }
